manifests/tenants/mosaic/shared/networking/grpc-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mosaic-grpc-gateway
  namespace: mosaic-grpc-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: grpc
    port: 443
    protocol: HTTPS
    hostname: "*.mosaic.com"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values:
                - mosaic-face-detection
                - mosaic-conversation-briefing
                - mosaic-audio-transcription
    tls:
      mode: Terminate
      certificateRefs:
      - name: mosaic-tls-cert
